# snake-game

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  run_game.sh
src/: CMakeLists.txt  apple.c  apple.h  field.c  field.h  font.c  font.h  game.c  game.h  main.c  menu.c  menu.h  snake.c  snake.h  tileset.c  tileset.h
